--- a/views/show.handlebars
+++ b/views/show.handlebars
@@ -3,7 +3,7 @@
   <a href="/restaurants/{{ restaurant._id }}/edit"><button type="button"
       class="btn btn-warning btn-sm font-weight-normal">Edit</button></a>
   <a href="/"><button class="mx-1 btn btn-warning btn-sm font-weight-normal">Back</button></a>
-  <form action="/restaurants/{{ restaurant._id }}/delete" method="POST">
+  <form action="/restaurants/{{ restaurant._id }}?_method=DELETE" method="POST">
     <button type="submit" class="mr-5 btn btn-outline-dark btn-sm font-weight-normal">Delete</button>
   </form>
 
