refactor: modify express routes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
 
     {{#each restaurant}}
     <div class="col-4">
-      <a href="/restaurants/{{ this._id }}" class="text-secondary">
+      <a href="/restaurant/{{ this._id }}" class="text-secondary">
         <div class="card mb-5">
           <img class="card-img-top" src={{ this.image }} alt={{ this.name }}>
           <div class="card-body p-3">
@@ -36,8 +36,8 @@
                 <i class="fas fa-star fa-xs"></i>
               </span>
               <div>
-                <a class="btn btn-warning btn-sm font-weight-normal" href="/restaurants/{{ this._id }}/edit">Edit</a>
-                <form action="/restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
+                <a class="btn btn-warning btn-sm font-weight-normal" href="/restaurant/{{ this._id }}/edit">Edit</a>
+                <form action="/restaurant/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
                   <button type="submit" class="btn btn-outline-dark btn-sm font-weight-normal">Delete</button>
                 </form>
               </div>
@@ -53,6 +53,6 @@
         <a class="text-secondary fas fa-plus fa-3x" style="text-decoration: none" href="/restaurant/new"></a>
       </div>
     </div>
-  </div>
 
+  </div>
 </div>
