--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
       <h2 class="text-secondary my-4">建立新餐廳</h2>
-      <form action="/restaurants" method="POST">
+      <form action="/restaurant" method="POST">
 
         <p class="mt-2 mb-2">
           <span class="text-secondary">餐廳名稱：</span>
