feat: add sort function

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,11 +92,35 @@ header {
   }
 }
 
-@media screen and (max-width: 575px) {
-  
+@media screen and (max-width: 575px) {  
   .card img{
     height: auto;
-  }
-  
+  }  
 }
 
+
+::placeholder { /* CSS 3 標準 */
+
+  color: white;
+
+}
+
+::-webkit-input-placeholder { /* Chrome, Safari */
+
+  color: white;
+
+}
+
+:-ms-input-placeholder { /* IE 10+ */
+
+  color: white;
+
+}
+
+::-moz-placeholder { /* Firefox 19+ */
+
+  color: white;
+
+  opacity: 1;
+
+}
