--- a/views/Layouts/main.handlebars
+++ b/views/Layouts/main.handlebars
@@ -28,9 +28,9 @@
 
   {{{body}}}
 
-  <script src="/javascripts/jquery-3.5.1.min.js"></script>
-  <script src="/javascripts/popper.min.js"></script>
-  <script src="/javascripts/bootstrap.js"></script>
+  <script src="/public/javascripts/jquery-3.5.1.min.js"></script>
+  <script src="/public/javascripts/popper.min.js"></script>
+  <script src="/public/javascripts/bootstrap.js"></script>
 
 </body>
 
