--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -3,73 +3,75 @@
     <div class="row">
       <div class="col-12 col-md-10 mx-auto">
 
-        <p class="mt-2 mb-2"></p>
-        <span class="text-secondary">
-          餐廳名稱：
-        </span>
-        <input type="text" class="rounded" placeholder="name" name="name" value="{{ restaurant.name }}"
-          required></input>
+        <p class="mt-2 restaurant-spec-list">
+          <span class="text-secondary">
+            餐廳名稱：
+          </span>
+          <input type="text" placeholder="name" name="name" value="{{ restaurant.name }}" required></input>
         </p>
 
-        <p class="mb-2"></p>
-        <span class="text-secondary">
-          餐廳類別：
-        </span>
-        <input type="text" class="rounded" placeholder="Ex.西式料理" name="category" list="category"
-          value="{{ restaurant.category }}" required>
-        <datalist id="category">
-          <option value="西式料理">西式料理</option>
-          <option value="日本料理">日本料理</option>
-          <option value="義式餐廳">義式餐廳</option>
-          <option value="中式餐廳">中式餐廳</option>
-          <option value="泰式料理">泰式料理</option>
-          <option value="中東料理">中東料理</option>
-          <option value="美式">美式</option>
-          <option value="酒吧">酒吧</option>
-          <option value="咖啡">咖啡</option>
-          <option value="其他">其他</option>
-        </datalist>
+        <p class="restaurant-spec-list">
+          <span class="text-secondary">
+            餐廳類別：
+          </span>
+          <input type="text" placeholder="Ex.西式料理" name="category" list="category" value="{{ restaurant.category }}"
+            required>
+          <datalist id="category">
+            <option value="西式料理">西式料理</option>
+            <option value="日本料理">日本料理</option>
+            <option value="義式餐廳">義式餐廳</option>
+            <option value="中式餐廳">中式餐廳</option>
+            <option value="泰式料理">泰式料理</option>
+            <option value="中東料理">中東料理</option>
+            <option value="美式">美式</option>
+            <option value="酒吧">酒吧</option>
+            <option value="咖啡">咖啡</option>
+            <option value="其他">其他</option>
+          </datalist>
         </p>
 
-        <p class="mb-2">
+        <p class="restaurant-spec-list">
           <span class="text-secondary">
             餐廳地址：
           </span>
-          <input type="text" name="location" value="{{ restaurant.location }}" class="rounded" required>
-          <span class="text-secondary ml-1">
-            Google maps：
-          </span>
-          <input type="text" name="google_map" value="{{ restaurant.google_map }}" class="rounded">
+          <input type="text" name="location" value="{{ restaurant.location }}" required>
         </p>
 
-        <p class="mb-2">
+        <p class="restaurant-spec-list restaurant-spec-maps">
+          <span class="text-secondary">
+            Google maps：
+          </span>
+          <input type="text" name="google_map" value="{{ restaurant.google_map }}">
+        </p>
+
+        <p class="restaurant-spec-list">
           <span class="text-secondary">
             餐廳電話：
           </span>
-          <input type="text" value="{{ restaurant.phone }}" name="phone" class="rounded">
+          <input type="text" value="{{ restaurant.phone }}" name="phone">
         </p>
 
-        <p class="mb-2">
+        <p class="restaurant-spec-list">
           <span class="text-secondary">
             餐廳評價：
           </span>
-          <input type="number" step="0.1" value="{{ restaurant.rating }}" name="rating" class="rounded" required>
+          <input type="number" step="0.1" value="{{ restaurant.rating }}" name="rating" required>
         </p>
 
-        <p class="mb-2">
-          <textarea name="description" placeholder="填寫評論..." class="rounded" id="description" cols="70"
+        <p class="restaurant-spec-list restaurant-spec-desc">
+          <textarea name="description" placeholder="填寫評論..." id="description"
             rows="5">{{ restaurant.description }}</textarea>
         </p>
 
-        <p class="mb-4">
+        <p class="restaurant-spec-list">
           <span class="text-secondary">
             圖片：
           </span>
-          <input type="text" name="image" value="{{ restaurant.image }}" class="rounded">
+          <input type="text" name="image" value="{{ restaurant.image }}">
         </p>
 
-        <button type="submit" class="btn btn-light mb-5">Save</button>
-        <a href="/" class="btn btn-light mb-5">Back</a>
+        <button type="submit" class="btn btn-light mb-5 mt-4">Save</button>
+        <a href="/" class="btn btn-light mb-5 mt-4">Back</a>
       </div>
     </div>
   </div>
