--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
             </button>
           </div>
           <div class="d-flex justify-content-end align-items-center ml-3" style="width: 20%">
-            <button type="button" class="btn btn-outline-secondary dropdown-toggle" style="width: 80%"
+            <button type="button" class="btn btn-outline-secondary dropdown-toggle" style="width: 100%"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               {{ filter }}
             </button>
@@ -36,7 +36,7 @@
   <div class="col-md-11 col-12 mx-auto row">
 
     {{#each restaurant}}
-    <div class="col-4">
+    <div class="col-lg-4 col-6">
       <a href="/restaurant/{{ this._id }}" class="text-secondary">
         <div class="card mb-5">
           <img class="card-img-top" src={{ this.image }} alt={{ this.name }}>
